Fixed letter spacing

--- a/eros/styles/micro/icontextbutton.module.css
+++ b/eros/styles/micro/icontextbutton.module.css
@@ -26,6 +26,7 @@
     font-size: 0.8437rem;
     line-height: 1.125em;
     text-align: center;
+    letter-spacing: 0;
 
     flex: none;
     flex-grow: 0;
